Added database models. Able to create account.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+#config
+/config.js
+
 # dependencies
 /node_modules
+
+# database logs
+/data
 
 # testing
 /coverage
