--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "material-ui": "^0.20.0",
+    "moment": "^2.20.1",
     "mongoose": "^4.13.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
