--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "jsonwebtoken": "^8.1.0",
     "material-ui": "^0.20.0",
     "moment": "^2.20.1",
-    "mongoose": "4.10.8",
+    "mongoose": "^4.13.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
