--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "https://squidmatch.herokuapp.com/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
