--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "squidmatchv2",
   "version": "0.1.0",
   "private": true,
-  "cacheDirectories": [
-    "node_modules",
-    "react-ui/node_modules"
-  ],
   "dependencies": {
     "axios": "^0.17.1",
     "bcrypt": "^1.0.3",
@@ -24,8 +20,11 @@
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "node server.js",
-    "heroku-postbuild": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
