--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bcrypt": "^1.0.3",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "material-ui": "^0.20.0",
@@ -16,6 +17,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "request": "^2.83.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
   },
