--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-persist": "^5.9.1",
     "request": "^2.83.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4"
